[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Maps/Map.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Flag/Flagl3.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Levels/Level_3.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 576, 10 )

[node name="Level_3" type="Node2D"]
script = ExtResource( 6 )

[node name="Map" type="Node2D" parent="." instance=ExtResource( 4 )]

[node name="Player" type="KinematicBody2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 128.854, 491.445 )
script = ExtResource( 2 )

[node name="Flag" type="Node2D" parent="."]
position = Vector2( 512, 192 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Flag"]
self_modulate = Color( 0.745098, 0.184314, 0.184314, 1 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Flag"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flag/Area2D"]
shape = SubResource( 4 )

[node name="killFlagArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="killFlagArea"]
position = Vector2( 520, 608 )
shape = SubResource( 3 )

[node name="Positions" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Positions"]
position = Vector2( 32, -24 )

[node name="Position2D2" type="Position2D" parent="Positions"]
position = Vector2( 96, -24 )

[node name="Position2D3" type="Position2D" parent="Positions"]
position = Vector2( 160.854, -24 )

[node name="Position2D4" type="Position2D" parent="Positions"]
position = Vector2( 224, -24 )

[node name="Position2D5" type="Position2D" parent="Positions"]
position = Vector2( 290, -22 )

[node name="Position2D6" type="Position2D" parent="Positions"]
position = Vector2( 354, -22 )

[node name="Position2D7" type="Position2D" parent="Positions"]
position = Vector2( 418.854, -22 )

[node name="Position2D8" type="Position2D" parent="Positions"]
position = Vector2( 482, -22 )

[node name="Position2D9" type="Position2D" parent="Positions"]
position = Vector2( 546, -22 )

[node name="Position2D10" type="Position2D" parent="Positions"]
position = Vector2( 610, -22 )

[node name="Position2D11" type="Position2D" parent="Positions"]
position = Vector2( 674.854, -22 )

[node name="Position2D12" type="Position2D" parent="Positions"]
position = Vector2( 738, -22 )

[node name="Position2D13" type="Position2D" parent="Positions"]
position = Vector2( 802, -22 )

[node name="Position2D14" type="Position2D" parent="Positions"]
position = Vector2( 866, -22 )

[node name="Position2D15" type="Position2D" parent="Positions"]
position = Vector2( 930.854, -22 )

[node name="Position2D16" type="Position2D" parent="Positions"]
position = Vector2( 994, -22 )

[node name="SpawnEnemy" type="Timer" parent="."]

[node name="FlagChildren" type="Node2D" parent="."]
[connection signal="body_entered" from="Flag/Area2D" to="Flag" method="_on_Area2D_body_entered"]
[connection signal="area_entered" from="killFlagArea" to="." method="_on_killFlagArea_area_entered"]
[connection signal="timeout" from="SpawnEnemy" to="." method="_on_SpawnEnemy_timeout"]
